--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,9 +20,12 @@ body, html {
 .container-fluid {
     color: black;
     background-color: rgba(255, 231, 189, 0.5);
-    text-align: center;
-    height: 100%;
+    text-align: left;
+    height: inherit;
+    width: inherit;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, serif;
+    border: 5px;
+    border-color: black;
 }
 
 /*row selector*/
@@ -30,15 +33,34 @@ body, html {
     height: 100%;
     justify-content: center;
     align-items: center;
+    /* background-color: rgba(255, 231, 189, 0.5); */
+}
+
+/*after button action*/
+.row-new {
+    height: 20%;
+    justify-content: left;
+    align-items: left;
+    /* background-color: rgba(255, 231, 189, 0.5); */
 }
 
 /*Search bar text selector with declaration block*/
-#text, #data {
+.form-group, #data {
     color: rgb(34, 34, 31);
     font-weight: bold;
     text-align: left;
     font-style: oblique;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, serif;
+}
+
+/*after button action*/
+.form-group-new {
+    display: inline-block;
+}
+
+/*after button action*/
+.data-display-new {
+    display: inline-block;
 }
 
 /*Search bar text hover selector*/
@@ -50,7 +72,7 @@ body, html {
 
 /*data display hover selector*/
 #data:hover {
-    color: rgba(4, 2, 44, 0.87);
+    color: rgba(79, 13, 209, 0.87);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     text-decoration-color: rgb(60, 52, 45);
 }
@@ -87,3 +109,10 @@ button:active {
     text-shadow: 0 2px rgb(34, 34, 31);
 }
 
+/*styling for time vs price chart*/
+#myChart {
+    height: 1em;
+    width: 1em;
+    background-color: rgba(79, 13, 209, 0.65);
+    color: brown;
+}
