--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,12 +20,12 @@ body, html {
 /*container selector
 * display all content 
 */
-.container-fluid {   
+.container {   
     text-align: left;
-    height: inherit;
-    width: inherit;
+    height: 100%;
+    width: 100%;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, serif;
-    border: 5px;
+    padding: 5px;
     background-color: rgba(255, 231, 189, 0.5);
 }
 
@@ -86,7 +86,7 @@ button:active {
     text-shadow: 0 2px rgb(34, 34, 31);
 }
 
-#coins-list, #currencies-list {
+#coins-list, #currency-list {
     background-color: rgba(255, 231, 189, 0.5);
     color: rgba(79, 13, 209, 0.87);
 }
